fix z-index on preloader

--- a/src/rendu_final_web/css/style.css
+++ b/src/rendu_final_web/css/style.css
@@ -1579,7 +1579,7 @@ li:last-child {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 99999;
   overflow: hidden;
   background: #e9ecef /* #212529 */
 }
